# pecunia

./: LICENSE  README.md  pyproject.toml
src/pecunia/: __main__.py  atoms.py  binomial_tree.py  code_builder.py  generate.py
tests/: test_binomial_tree.py  utils.py
