[tool.poetry]
name = "pecunia"
version = "0.1.0"
description = "A riff on \"Composing Contracts: An Adventure in Financial Engineering\""
authors = ["Jan Burgy <jburgy@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
mypy = "^0.971"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
